// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ProfileStatusSwitchItem should match the snapshot with title and pot.some 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
      }
    }
  >
    <Text
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 18,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 18,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      testID="ProfileSwitchItemTitleTestID"
      weight="SemiBold"
      weightColorFactory={[Function]}
    >
      title
    </Text>
    <RCTSwitch
      accessibilityLabel="Select to activate"
      accessibilityRole="switch"
      accessible={true}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#0073E6"
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "marginBottom": -5,
            "marginTop": -5,
          },
        ]
      }
      testID="ProfileRemoteSwitchTestID"
      thumbTintColor="default"
      tintColor="default"
      value={true}
    />
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#C9C9C9",
        },
        false,
        Object {
          "height": 0.5,
        },
      ]
    }
  />
</View>
`;

exports[`Test ProfileStatusSwitchItem should match the snapshot with title and pot.someLoading 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
      }
    }
  >
    <Text
      color="bluegreyDark"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 18,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 18,
          },
          Object {
            "color": "#17324D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "600",
          },
        ]
      }
      testID="ProfileSwitchItemTitleTestID"
      weight="SemiBold"
      weightColorFactory={[Function]}
    >
      title
    </Text>
    <View
      style={
        Array [
          Object {},
          Object {
            "width": 51,
          },
        ]
      }
    >
      <ActivityIndicator
        accessibilityLabel="Loading..."
        color="black"
        testID="ProfileRemoteSwitchTestID"
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#C9C9C9",
        },
        false,
        Object {
          "height": 0.5,
        },
      ]
    }
  />
</View>
`;
